fixed homepage issues, removed spacing between map and footer and banner, increased video frame to 20px same as slider

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -43,7 +43,7 @@
   left: -6px;
   @media(min-width: $screen-md-min) {
     left: 0;
-    bottom: 60px;
+    bottom: 50px;
   }
   .video {
     width: 100%;
