--- a/css/olympiawerk.css
+++ b/css/olympiawerk.css
@@ -13440,7 +13440,7 @@ body a {
 @media (min-width: 992px) {
   .banner-bg {
     left: 0;
-    bottom: 60px;
+    bottom: 50px;
   }
 }
 
